Set line height of task item to prevent 'jumping' when hovering over a multiline task

--- a/public/themes/default/stylesheets/project/task_list.css
+++ b/public/themes/default/stylesheets/project/task_list.css
@@ -87,6 +87,7 @@ div.taskList .taskListTags span {
 
 div.taskList ul.taskItems {
   padding-left: 0px;
+  line-height: 160%;
 }
 
 div.taskList ul.taskItems li {
